[SONARCLOUD] Refactoring package "outils" and "vues"